--- a/.github/workflows/MT7621_HiWiFi_B70_AP.yml
+++ b/.github/workflows/MT7621_HiWiFi_B70_AP.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt
+name: MT7621_HiWiFi_B70_AP
 
 on:
 #  release:
@@ -119,5 +119,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_MT7621
+        name: OpenWrt_MT7621_HiWiFi_B70_AP
         path: ${{ env.FIRMWARE }}
