--- a/.github/workflows/x86_full.yml
+++ b/.github/workflows/x86_full.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: MT7621_HiWiFi_B70_AP
+name: x86_full
 
 on:
 #  release:
@@ -119,5 +119,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_MT7621_HiWiFi_B70_AP
+        name: OpenWrt_x86_full
         path: ${{ env.FIRMWARE }}
