--- a/.github/workflows/OpenWrt_x86_full.yml
+++ b/.github/workflows/OpenWrt_x86_full.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt_x86_full
+name: OpenWrt_x86_full
 
 on:
 #  release:
@@ -26,7 +26,7 @@ env:
   REPO_BRANCH: master
   CONFIG_FILE: .config
   DIY_SH: diy.sh
-  SSH_ACTIONS: false
+  SSH_ACTIONS: true
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -112,7 +112,7 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_OpenWrt_x86_full
+        name: OpenWrt_x86_full
         path: ${{ env.FIRMWARE }}
 
     - name: Upload firmware to cowtransfer
